<resources>
    <string name="app_name">Fleetify Report</string>
    <string name="version_1_0_0_text">Version 1.0.0</string>
    <string name="laporan_keluhan_kendaraan_title">Laporan Keluhan Kendaraan</string>
    <string name="laporan_keluhan_card_title">Laporan Keluhan</string>
    <string name="catatan_keluhan_title">Catatan Keluhan:</string>
    <string name="buat_laporan_baru_btn">Buat Laporan Baru</string>
    <string name="form_laporan_keluhan_dialog_title">Form Laporan Keluhan</string>
    <string name="masukan_keluhan_disini_edt_hint">Masukan keluhan disini</string>
    <string name="dokumen_laporan_title">Dokumen Laporan</string>
    <string name="ambil_foto_btn_text">Ambil Foto</string>
    <string name="kirim_laporan_btn_text">Kirim Laporan</string>
    <string name="tutup_dialog_description">Tutup Dialog</string>
    <string name="pilih_sumber_ambil_gambar_prompt">Pilih sumber ambil gambar</string>
    <string name="take_photo_prompt">Buka Kamera\n</string>
    <string name="choose_from_gallery_prompt">Pilih Dari Galleri</string>
    <string name="izin_kamera_prompt">Izin kamera diperlukan untuk mengambil foto.</string>
    <string name="gagal_mengambil_foto">Gagal Mengambil Foto!\n\n</string>
    <string name="permission_denied_please_grant_the_permission_to_proceed">Izin dibatalkan, Mohon aktifkan izin yang dibutuhkan</string>
    <string name="this_permission_is_required_to_select_an_image">Izin ini dibuthkan untuk mengambil gambar dari galeri\n</string>
    <string name="catatan_keluhan_tidak_boleh_kosong_err">Catatan keluhan tidak boleh kosong!</string>
    <string name="dokumen_laporan_tidak_boleh_kosong_err">Dokumen laporan tidak boleh kosong!</string>
    <string name="gagal_memproses_dokumen_foto_err">Gagal memproses dokumen foto!</string>
    <string name="mohon_tunggu_sebentar_sedang_mengirim_report_loading">Mohon tunggu sebentar, sedang mengirim report..</string>
    <string name="laporan_berhasil_dibuat_text">Laporan Berhasil Dibuat!</string>
    <string name="laporan_kamu_akan_kami_proses_paling_lambat_3x24_jam">Laporan kamu akan kami proses paling lambat 3x24 jam</string>
    <string name="coba_lagi_text_snackbar">Coba Lagi</string>
    <string name="masukan_plat_nomor_mobil_hint">Masukan Plat Nomor Mobil</string>
    <string name="data_kosong_state_title">Data Kosong</string>
    <string name="data_tidak_di_temukan_buat_laporan_baru_dengan_tombol_di_bawah_atau_cari_data_lain_empty_state_prompt">data tidak di temukan, buat laporan baru dengan tombol di bawah. atau cari data lain</string>
    <string name="kosongkan_kolom_pencarian">Kosongkan kolom pencarian</string>
    <string name="kembali_btn">Kembali</string>
    <string name="cari_report_title">Cari Report</string>
</resources>