<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.SearchActivity">

    <ImageView
        android:layout_width="32dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/kembali_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_back"
        android:id="@+id/iv_back"
        android:layout_height="32dp" />

    <TextView
        android:layout_width="0dp"
        android:text="@string/cari_report_title"
        app:layout_constraintTop_toTopOf="@id/iv_back"
        android:id="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"
        android:textAppearance="@style/TextHeadingMedium"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_search_report"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_rounded_edt"
        android:padding="16dp"
        android:hint="@string/masukan_plat_nomor_mobil_hint"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/btn_clear_search"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/kosongkan_kolom_pencarian"
        android:src="@drawable/ic_close"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/edt_search_report"
        app:layout_constraintEnd_toEndOf="@id/edt_search_report"
        app:layout_constraintBottom_toBottomOf="@id/edt_search_report"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_reports"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/edt_search_report"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/report_list_item_layout" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/shimmer_loading"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edt_search_report"
        app:shimmer_duration="600">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/report_list_item_shimmer_layout" />

            <include layout="@layout/report_list_item_shimmer_layout" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/empty_state_layout"
        android:visibility="gone"
        android:background="@color/md_theme_onPrimary"
        app:layout_constraintTop_toTopOf="@id/rv_reports"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        tools:visibility="visible"
        android:layout_height="0dp">

        <ImageView
            android:layout_width="64dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_empty_state"
            android:layout_height="64dp" />

        <TextView
            android:layout_width="match_parent"
            android:text="@string/data_kosong_state_title"
            android:textAppearance="@style/TextHeadingMedium"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:text="@string/data_tidak_di_temukan_buat_laporan_baru_dengan_tombol_di_bawah_atau_cari_data_lain_empty_state_prompt"
            android:textAppearance="@style/TextCaption"
            android:layout_marginHorizontal="34dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/md_theme_tertiary"
            android:textAlignment="center"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>